k8s/istio/networking/helloworld-virtual-service-routebased-on-url.yaml
###########################################################################
# Istio Edge Service resource (Virtual Service, Destination Route, Gateway)
##########################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*" # Loadbalancer( Web URL) URL name.

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
  namespace: default
spec:
  hosts:
#    - helloworld.default.svc.cluster.local
    - "*" ## So that the webURL can call the gateway as well. Equate to host in Gateway
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
#        - uri:
#            exact: /hello
        - uri:
            exact: /random_image
        - uri:
            exact: /covid
        - uri:
            prefix: /actuator/health
      route:
        - destination:
            host: helloworld.default.svc.cluster.local
            subset: 1-0-0-snapshot
#      timeout: 10s
#      retries:
#        attempts: 3
#        perTryTimeout: 2s

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
spec:
  host: helloworld.default.svc.cluster.local
  subsets:
    - labels:
        version: 1-0-0-snapshot
      name: 1-0-0-snapshot
