k8s/istio/networking/helloworld-virtualservice-delayed.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
spec:
  hosts:
    - hello-world
  gateways:
    - ext-host-gwy
  http:
    - fault:
        delay:
          percentage:
            value: 1
          fixedDelay: 5s
    - route:
        - destination:
            host: hello-world
            subset: v1
